style: fix overflowing issue

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -12,6 +12,10 @@
   padding: 0;
 }
 
+body {
+  overflow-x: hidden;
+}
+
 button,
 input,
 textarea {
@@ -23,4 +27,9 @@ textarea {
 
 li {
   list-style: none;
+}
+
+img,
+svg {
+  max-width: 100%;
 }
